# Trabalho-ED

./: README.md  foco.py  grafo.py  main.py  posto.py  pyproject.toml
entradas/: instance_1.in  instance_2.in  instance_4.in  instance_5.in  instance_6.in  instance_9.in
saidas/: instance_1.out  instance_10.out  instance_2.out  instance_3.out  instance_4.out  instance_5.out  instance_6.out  instance_7.out  instance_8.out  instance_9.out
src/: __init__.py  erros.py  foco.py  grafo.py  missao.py  posto.py  score.py  simulacao.py
tests/: instance_10.in  instance_3.in  instance_7.in  instance_8.in
